--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ eureka:
 
 # Configure CORS for entire project:
 spring:
+  application:
+    name: gateway
   cloud:
     gateway:
       cors-configurations:
