replaced tomcat references to netty

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -89,5 +89,7 @@ logging:
   level:
     org:
       springframework: INFO
-      apache:
-        tomcat: ERROR
+    io:
+      netty: ERROR
+    reactor:
+      netty: ERROR
