--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+       <!-- Needed to use Gateway Filter --> 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
         <!-- Includes testing dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
