add credit score service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -184,6 +184,27 @@ spring:
                   maxBackoff: 50ms
                   factor: 2
                   basedOnPreviousValue: false
+        
+        - id: tax-demo
+          uri: lb://tax-demo
+          predicates:
+            - Path=/api/credit/**
+          filters:
+            - name: AuthenticationFilter
+            - name: CircuitBreaker
+              args:
+                name: fallbackController
+                fallbackUri: forward:/cache/credit
+            - name: Retry
+              args:
+                retries: 3
+                statuses: BAD_GATEWAY
+                methods: GET
+                backoff:
+                  firstBackoff: 10ms
+                  maxBackoff: 50ms
+                  factor: 2
+                  basedOnPreviousValue: false
 
 # Configure logging levels:
 logging:
