--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
           # All routes:
           "[/**]":
             # Typical React port. Could also put your load balancer url here instead:
-            allowedOrigins: ${FRONTEND_URL:http://localhost:5173}
+            allowedOrigins: ${FRONTEND_URL:http://localhost:5173}, http://localhost:5173, https://frontend.skillstorm-congo.com
             allowedHeaders: "*"
             exposedHeaders: "*"
             allowCredentials: true
