--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Core dependency for a Spring Gateway -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -76,6 +82,40 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- attached to Maven test phase -->
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                          	<rules>
+                          	  	<rule>
+                          	  	  	<limits>
+                          	  	  	  	<limit>
+                          	  	  	  	  	<!-- <counter>COMPLEXITY</counter>
+                          	  	  	  	  	<value>COVEREDRATIO</value>
+                          	  	  	  	  	<minimum>0.80</minimum> -->
+                          	  	  	  	</limit>
+                          	  	  	</limits>
+                          	  	</rule>
+                          	</rules>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
